tests/NormalTests/paczka2/big_fuzzy/62342916.err
Error in line 4: A654 S977 44,4
Error in line 9: PWEu S211 1W,6
Error in line 10: A654 ?977 41,6
Error in line 8: A654 A654 83,2
Error in line 2: I8mreoi A654 66,3
Error in line 17: gB5v S977 88,0
Error in line 20: P7Eu S211 66,4
Error in line 22: P7Eu A309 69,8
Error in line 24: X9kjCPY A654 57,7
Error in line 21: gB5v A309 46,5
Error in line 19: I8mreoi A309 94,0
Error in line 46: gB5v S211 41,7
Error in line 12: XDDSWfH9oT S211 298,7
Error in line 34: A654 S211 11,4
Error in line 55: A654 A309 88,6
Error in line 56: A654 A654 87,8
Error in line 48: gB5v A654 16,2
Error in line 63: X9kjCPY A309 58,5
Error in line 64: X9kjCPY S211 86,9
Error in line 65: X9kjCPY S977 85,2
Error in line 51: XDDSWfH9oT A654 60,6
Error in line 73: gB5v S211 81,75
Error in line 79: gB5v A654 1,0
Error in line 81: X9kjCPY A654 85,1
Error in line 101: P7Eu S211 87,2
Error in line 104: S0hDCJ S977 94,5
Error in line 102: A654 A654 53,0
Error in line 110: X9kjCPY S211 62,7
Error in line 115: X9kjCPY S977 98,3
Error in line 116: X9kjCPY A654 50,1
Error in line 119: X9kjCPY S211 16,8
Error in line 132: S0hñCJ A309 53,8
Error in line 122: P7Eu A309 56,8
Error in line 130: S0hDCJ A654 37,8
Error in line 133: P7Eu S977 56,8
Error in line 134: S0hDCJ A309 242,1
Error in line 142: A654 A309 59,7
Error in line 151: S0hDCJ S211 98,4
Error in line 164: X9kjCPY S977 93,3
Error in line 183: S0hDCJ S211 13,5
Error in line 184: X9kjCPY S977 14,5
Error in line 186: X9kjCPY A309 64,5
Error in line 194: gB5v S211 86,4
Error in line 196: X9kjCPY S977 62,0
Error in line 214: A654 A654 97,9
Error in line 215: X9kjCPY A309 93,9
Error in line 220: gB5v A309 86,5
Error in line 224: I8mreoi S977 30,7
Error in line 226: P7Eu S211 22,4
Error in line 241: P7Eu A309 79,8
Error in line 250: S0hDCJ S977 13,24
